add cart domain model, repository, and controller; implement create cart use case and DTO mapping; configure H2 for testing